@@ -3,7 +3,6 @@ package model;
 import exception.InvalidInputException;
 
 public abstract class Person {
-
     protected int id;
     protected String name;
     protected int age;
@@ -16,35 +15,40 @@ public abstract class Person {
         setDepartment(department);
     }
 
-    public int getId() { return id; }
-    public String getName() { return name; }
-    public int getAge() { return age; }
-    public String getDepartment() { return department; }
+    public int getId() {
+        return id;
+    }
+    public String getName() {
+        return name;
+    }
+    public int getAge() {
+        return age;
+    }
+    public String getDepartment() {
+        return department;
+    }
 
     public void setId(int id) {
-        if (id <= 0) {
-            throw new InvalidInputException("ID must be positive");
+        if (id < 0) {
+            throw new InvalidInputException("Invalid Id!");
         }
         this.id = id;
     }
-
     public void setName(String name) {
-        if (name == null || name.isBlank()) {
-            throw new InvalidInputException("Name cannot be empty");
+        if (name == null || name.trim().isEmpty()) {
+            throw new InvalidInputException("Invalid Name!");
         }
         this.name = name;
     }
-
     public void setAge(int age) {
-        if (age < 0 || age > 120) {
-            throw new InvalidInputException("Invalid age");
+        if (age < 0 || age > 121) {
+            throw new InvalidInputException("Invalid Age!");
         }
         this.age = age;
     }
-
     public void setDepartment(String department) {
-        if (department == null || department.isBlank()) {
-            throw new InvalidInputException("Department cannot be empty");
+        if (department == null || department.trim().isEmpty()) {
+            throw new InvalidInputException("invalid Department!");
         }
         this.department = department;
     }
@@ -55,8 +59,7 @@ public abstract class Person {
     @Override
     public String toString() {
         return "[" + getRole() + "] " + name +
-                " | ID: " + id +
-                " | Age: " + age +
-                " | Dept: " + department;
+                " (Age: " + age +
+                ", Dept: " + department + ")";
     }
 }
